

DescTools 0.99.40 (2021-03-06)
------------------------------

NEW FUNCTIONS ADDED:
  * StrExtractBetween() returns the part of a string bounded by the expression 
    "left" on the left side and "right" on the right side.
  * Some new tests have been added. We will continuously add more 
    in the near future. 

UPDATED FUNCTIONS:
  * PasswordDlg() allows to add a checkbox option.
  * BinomRatCI() has undergone some streamlining concerning input and output.
  * AllIdentical() has been rewritten to be 4 times faster.
  
BUGFIXES:
  * Classic confidence intervals for Skew() and Kurt() are now reported on
    both sides.
  



DescTools 0.99.39 (2020-12-06)
------------------------------

NEW FUNCTIONS ADDED:
  * GetCalls() returns the function calls used within a given function.
  * BhapkarTest() is a more powerful alternative to StuartMaxwellTest().

UPDATED FUNCTIONS:
  * MultMerge() offers an option to define a merging column.
  * TextToTable() gets a new argument "check.names".
  * Outlier() gets a new option "hampel". 
  * TOne() allows to omit test by setting TEST=NA.
  * BinomCI() gets three more methods "waldcc", "midp" and "lik".
  
BUGFIXES:
  * Bug in Zodiac() led to a wrong zodiac for June 21. (Credits to pmarkun)
  * plot.Desc.numnum() will respect given xlab/ylab now.
  * TOne() adapts the number of column names if the total sum is suppressed.
  * Warning in print.Desc.numfact has been fixed.
  * BinomCI for the method wilsoncc would not have returned the correct values
    in cases the estimator was 0 or 1. (Credits to Martin Mayer)
  * R reported a warning in CohenKappa as a cast form 1d array to vector had 
    not been done. (Credits to Chris Andrews)
  


DescTools 0.99.38 (2020-09-06)
------------------------------

NEW FUNCTIONS ADDED:
  * ORToRelRisk.glm() converts odds ratios from a logistic regression
    to relative risks.
  * RevCode() reverses the codes of a numeric variable (e.g. a Likert 
    scale).  