@@ -1,7 +1,7 @@
 Package: DescTools
 Type: Package
 Title: Tools for Descriptive Statistics
-Version: 0.99.39.3
+Version: 0.99.39.4
 Date: 2020-12-06
 Authors@R: c(
   person("Andri", "Signorell", email = "andri@signorell.net", role = c("aut", "cre")),
@@ -89,6 +89,7 @@ Authors@R: c(
   person("Caroline"      , "Rodriguez",           role = c("ctb")),
   person("Nathan"        , "Russell",             role = c("ctb")),
   person("Nick"          , "Sabbe",               role = c("ctb")),
+  person("Ralph"         , "Scherer",             role = c("ctb")),
   person("Venkatraman E.", "Seshan",              role = c("ctb")),
   person("Michael"       , "Smithson",            role = c("ctb")),
   person("Greg"          , "Snow",                role = c("ctb")),
